--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-RAZORPAY_KEY_ID=rzp_test_FY3aFxOqiIkLss
-RAZORPAY_KEY_SECRET=n7uBN55B3cgm8RWS77t1Wdcn
-PORT=3000
+RAZORPAY_KEY_ID=
+RAZORPAY_KEY_SECRET=
+PORT=
