--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+     "dev": "nodemon index.js"
+   
   },
   "author": "PClub IIT Kanpur",
   "license": "ISC",
@@ -13,10 +14,22 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "cors": "^2.8.5",
+  
     "crypto": "^1.0.1",
-    "dotenv": "^16.6.0",
+    
+       "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
+    "mysql2": "^3.14.1",
+    "node-cron": "^4.1.0",
+    "nodemon": "^3.1.10",
+    "sequelize": "^6.37.7",
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5",
     "razorpay": "^2.9.6"
   }
 }
