--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,35 +1,34 @@
-version: '3.8'
+version: "3.8"
 
 services:
   app:
-    build: . 
+    build: .
     env_file:
-      - .env 
+      - .env
     ports:
-      - "3001:3001" 
+      - "3001:3001"
     volumes:
-      - .:/usr/src/app 
-      - /usr/src/app/node_modules 
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     depends_on:
       db:
-        condition: service_healthy   
+        condition: service_healthy
 
   db:
-    image: mysql:8.0 
-    restart: always 
+    image: mysql:8.0
+    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: password 
-      MYSQL_DATABASE: database 
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: database
     ports:
-      - "3306:3306" 
+      - "3307:3306"
     volumes:
-      - db_data:/var/lib/mysql 
-    healthcheck: 
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      - db_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
       timeout: 5s
       retries: 5
 
 volumes:
   db_data: {}
-
