--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,9 @@
     "node-cron": "^4.1.0",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
-    "uuid": "^11.1.0",
-    "xlsx": "^0.18.5"
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "dev": "nodemon index.js"
   }
 }
-
